// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundedButton container renders correctly default 1`] = `
<Styled(Component)
  isActive={true}
  onPress={[MockFunction]}
>
  <Icon
    allowFontScaling={false}
    color="[mocked white]"
    name="video-off"
    size={28}
  />
</Styled(Component)>
`;

exports[`RoundedButton container renders correctly inactive 1`] = `
<Styled(Component)
  isActive={false}
  onPress={[MockFunction]}
>
  <Icon
    allowFontScaling={false}
    color="[mocked grey700]"
    name="video-off"
    size={28}
  />
</Styled(Component)>
`;

exports[`RoundedButton container renders correctly with active icon 1`] = `
<Styled(Component)
  isActive={true}
  onPress={[MockFunction]}
>
  <Icon
    allowFontScaling={false}
    color="[mocked white]"
    name="video"
    size={28}
  />
</Styled(Component)>
`;
